fix: http request methods
